# Showcase-Studio

./: .gitignore  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discord.rs  lib.rs  logging.rs  main.rs  models.rs  showcase_manager.rs  sqlite_manager.rs  version_manager.rs
src/components/image-editor/: constants.ts
src/components/image-editor/components/: ControlSection.tsx  ControlsPanel.tsx  ImageCarousel.tsx  ImagePreview.tsx  OverlayRenderer.tsx  WelcomeModal.tsx
src/components/image-editor/hooks/: useKeyboardShortcuts.ts  useOverlayResizer.ts  useShowcaseLoader.ts
src/components/layout/: FilterPanel.tsx  MainHeader.tsx  Sidebar.tsx  Toasts.tsx
src/components/settings/: AboutSection.tsx  ApiTokensSection.tsx  CustomizationSection.tsx  DataStorageSection.tsx  IndexingSection.tsx  SettingsLayout.tsx  SettingsSidebar.tsx
src/components/showcases/: AttachmentSelectionModal.tsx  DeleteShowcaseModal.tsx  MessageSelectionGrid.tsx  NewShowcaseModal.tsx  ShowcaseDetailsModal.tsx  ShowcaseList.tsx
src/components/ui/: CustomSelect.tsx
src/pages/: EditSelectedImages.tsx  GeneratePresentationPage.tsx  MainPage.tsx  SelectImagesForShowcase.tsx  SettingsPage.tsx  SetupPage.tsx  ShowcasePreviewPage.tsx  SortImagesPage.tsx
src/utils/: frontendLogger.ts  log.ts  screenshot.ts  types.ts  versionCheck.ts
