[package]
name = "showcase_app"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "showcase_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
keyring = { version = "3.6.1", default-features = false, features = ["windows-native"] }
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
serenity = { version = "0.12.4", default-features = false, features = ["http", "model", "rustls_backend", "utils", "builder"] }
rusqlite = { version = "0.34.0", features = ["bundled", "limits"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
base64 = "0.22.1"
mime_guess = "2.0.5"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-shell = "2"
regex = "1.11.1"
once_cell = "1.17"
log = "0.4"
tauri-plugin-process = "2"
semver = "1.0.26"
